# creature_adventures_cpp

./: .gitignore  CMakeLists.txt  TODO.txt
inc/: action.h  artifact.h  battle.h  cmakeconfig.h.in  core.h  creature.h  datatypes.h  deck.h  defs.h  dice.h  item.h  modifier.h  player.h  sigil.h  tieredobjectbase.h
src/: action.cpp  artifact.cpp  battle.cpp  core.cpp  creature.cpp  deck.cpp  dice.cpp  item.cpp  main.cpp  modifier.cpp  player.cpp  sigil.cpp  tieredobjectbase.cpp
